--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,4 @@
 repos:
-- repo: https://github.com/ambv/black
-  rev: 23.11.0
-  hooks:
-  - id: black
-    name: Reformat files
 - repo: local
   hooks:
   - id: forbid_prints
@@ -18,17 +13,14 @@ repos:
     entry: "TODO"
     language: pygrep
     types: [python]
-- repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.12.0
-  hooks:
-  - id: reorder-python-imports
-    name: Reorder imports
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: 'v0.1.6'
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.4.4
   hooks:
     - id: ruff
+      args: [ --fix ]
+    - id: ruff-format
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.7.1
+  rev: v1.10.0
   hooks:
   - id: mypy
     name: Run type checks
@@ -44,3 +36,11 @@ repos:
     name: Generate changelog
     entry: bash -c "gitchangelog > CHANGELOG.md"
     stages: [commit]
+- repo: local
+  hooks:
+  - id: pytest-check
+    name: pytest-check
+    entry: pytest
+    language: system
+    pass_filenames: false
+    always_run: true
